# Keryke-OS

./: Bibliografie.md  README.md  keryke_os_bibliografie.md
kerike_concurs/: ARHITECTURA_SISTEM.md  PROTOCOL_BLE.md
kerike_concurs/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
kerike_concurs/docs/: Schema vesta raspberry pi.drawio  core.drawio  core_rapberry_py.drawio
kerike_concurs/firmware/esp32_keryke_ble/: esp32_keryke_ble.ino  pi_client_ble.py
kerike_concurs/host/: camera_publisher.py  test_client.py
kerike_concurs/scripts/: benchmark_depth_model.py  benchmark_yolo_imgsz.py  depth_visualize.py  diagnose_calibration.py  diagnose_yolo.py  grab_frame.py  test_ai.sh
kerike_concurs/src/hive_perception/: package.xml  setup.cfg  setup.py
kerike_concurs/src/hive_perception/hive_perception/: audio_devices.py  audio_event_node.py  ble_bridge_node.py  brain_node.py  calibrate_depth.py  dashboard_node.py  decision_container.py  depth_calib_utils.py  depth_node.py  haptic_vest_node.py  imx500_bridge_node.py  model_paths.py  narrator_node.py  perception_container.py  perception_geometry.py  spatial_risk_node.py  test_acceptance.py  tts_node.py  wake_node.py  yolo_detection_node.py  yolo_segmentation_node.py
kerike_concurs/src/hive_perception/launch/: bringup.launch.py
